Fix horizontal scrolling on smaller screens

--- a/src/css/teamcalneo.css
+++ b/src/css/teamcalneo.css
@@ -136,7 +136,7 @@ body {
 #main {
   min-height: 100vh;
   margin-left: 260px;
-  overflow: hidden;
+  overflow-x: auto;
   transition: all .35s ease-in-out;
 }
 
